write generator and install dependencies

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "bluebird": "^3.7.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "faker": "^5.1.0",
+    "faker": "^5.3.1",
+    "file-system": "^2.2.2",
     "jest-environment-enzyme": "^7.1.2",
     "jest-enzyme": "^7.1.2",
     "moment": "^2.29.1",
