--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "watch": "webpack -w",
     "db:setup": "node database/seed.js",
     "test": "jest",
-    "docker": "webpack & node server & node database/seed.js"
+    "docker": "webpack & node server & node database/seed.js",
+    "seed": "psql mariaward -h 127.0.0.1 -d postgres -f schema.sql",
+    "generator": "node generator/generator.js"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "bluebird": "^3.7.2",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^5.3.1",
@@ -29,6 +32,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.12",
     "path": "^0.12.7",
+    "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dev": "0.0.1",
