changes to server to incorporate load testing

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "docker": "webpack & node server & node database/seed.js",
     "seed": "psql mariaward -h 127.0.0.1 -d postgres -f schema.sql",
-    "generator": "node generator/generator.js"
+    "generator": "node generator/generator.js",
+    "stress": "k6 run specs/loadtest.js"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -31,6 +32,7 @@
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.12",
+    "newrelic": "^7.1.1",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
